cli/tests/lit/import-from-missing.lit
// Test parsing import statements
// RUN: @parser @file

import { foo }
// CHECK: Parse error: `from` expected
